--------------------------- Changelog -----------------------------
4.0.j
Fixed - No longer clears Ruin Conditions off core worlds with "IndEvo_RuinsAlways" tag

4.0.i
Added - "rural" item tag to mark them as no-impact for rural gov
Fixed - Crash when trying to change government type

4.0.h
Added - Two new planet stories
Added - Military Tag to privateer base, all artillery stations, relays, ground defenses, planetary shield & orbital stations
Added - Officiated the Anchorage lock-in bug: they are now intended to allow being changed at any time
Adjusted - Anchorage description to reflect the change
Adjusted - Cheesing forge world heat requirements with an orbital lamp still works, but removing the lamp now has consequences
Adjusted - Blacklisted Omega, Threat and Dweller from dropping consumable items
Adjusted - Overhauled the description of the Lawless Subpopulation Condition to be more useful
Adjusted - Managed Democracy now applies Hellpods to destroyers instead of cruisers
Adjusted - Managed Democracy description clarified: military action increases income
Adjusted - A bunch of mod cross compatibility with Unknown Skies, PR'd by JamesTripleQ. Thank you!
Fixed - Camouflage Emitter no longer applies "notable" to non-notable ships upon removal
Fixed - Camouflage Emitter no longer crashes (rarely) upon destruction of the ship it is attached to
Fixed - Managed Democracy tooltip corrected
Fixed - Rural Polity tooltip corrected
Fixed - Forge World no longer applies pollution to non-habitable planets
Fixed - Checking the edicts in codex no longer causes them to spam the unrest message
Fixed - An absolutely ancient bug that caused the Variable Manufactory to register it's listeners twice
Fixed - Salvage Yards now respects external supply and demand adjustments (though it may sometimes not reflect in the tooltip)
Fixed - Automated Shipyards intel now shows the correct commodities required for activation